// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`владелец есть подменник должен отрендерить несколько телефонов + подсказка "почему номер не мой? 1`] = `
<div
  className="OfferPhone OfferPhone_more"
>
  <div
    className="OfferPhone__container"
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <HoveredTooltip
      defaultPadding={false}
      directions={
        Array [
          "bottom-center",
        ]
      }
      isVisible={false}
      mainOffset={28}
      popupTheme="dark"
      secondaryOffset={-10}
      showTimeout={200}
      tooltipContent={[Function]}
    >
      <div
        className="OfferPhone__virtualPhone"
      />
    </HoveredTooltip>
    <div
      className="OfferPhone__list"
    >
      <div
        className="OfferPhone__item"
        key="+7 916 039-63-38"
      >
        <div
          className="OfferPhone__phoneTitle"
        >
          +7 916 039-63-38
        </div>
      </div>
      <Link
        className="OfferPhone__loadMore"
        url="#"
      >
        Ещё 
        1 телефон
        <IconSvg
          className="OfferPhone__dropdownIcon"
          id="svgID"
          size="24"
        />
      </Link>
      <HoveredTooltip
        defaultPadding={true}
        directions={
          Array [
            "bottom-center",
          ]
        }
        isVisible={false}
        mainOffset={10}
        popupTheme="dark"
        secondaryOffset={-10}
        showTimeout={200}
        tooltipContent={[Function]}
      >
        <Link
          className="OfferPhone__notMyNumberLink"
        >
          Почему не мой номер
        </Link>
      </HoveredTooltip>
    </div>
  </div>
</div>
`;

exports[`владелец есть подменник должен отрендерить один телефон + подсказка "почему номер не мой?" 1`] = `
<div
  className="OfferPhone"
>
  <div
    className="OfferPhone__container"
  >
    <HoveredTooltip
      defaultPadding={false}
      directions={
        Array [
          "bottom-center",
        ]
      }
      isVisible={false}
      mainOffset={28}
      popupTheme="dark"
      secondaryOffset={-10}
      showTimeout={200}
      tooltipContent={[Function]}
    >
      <div
        className="OfferPhone__virtualPhone"
      />
    </HoveredTooltip>
    <div
      className="OfferPhone__list"
    >
      <div
        className="OfferPhone__item"
        key="+7 916 039-63-38"
      >
        <div
          className="OfferPhone__phoneTitle"
        >
          +7 916 039-63-38
        </div>
      </div>
      <HoveredTooltip
        defaultPadding={true}
        directions={
          Array [
            "bottom-center",
          ]
        }
        isVisible={false}
        mainOffset={10}
        popupTheme="dark"
        secondaryOffset={-10}
        showTimeout={200}
        tooltipContent={[Function]}
      >
        <Link
          className="OfferPhone__notMyNumberLink"
        >
          Почему не мой номер
        </Link>
      </HoveredTooltip>
    </div>
  </div>
</div>
`;

exports[`владелец нет подменника должен отрендерить несколько телефонов без времени 1`] = `
<div
  className="OfferPhone OfferPhone_more"
>
  <div
    className="OfferPhone__container"
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      className="OfferPhone__list"
    >
      <div
        className="OfferPhone__item"
        key="+7 916 039-63-38"
      >
        <div
          className="OfferPhone__phoneTitle"
        >
          +7 916 039-63-38
        </div>
      </div>
      <Link
        className="OfferPhone__loadMore"
        url="#"
      >
        Ещё 
        1 телефон
        <IconSvg
          className="OfferPhone__dropdownIcon"
          id="svgID"
          size="24"
        />
      </Link>
    </div>
  </div>
</div>
`;

exports[`владелец нет подменника должен отрендерить один телефон без времени 1`] = `
<div
  className="OfferPhone"
>
  <div
    className="OfferPhone__container"
  >
    <div
      className="OfferPhone__list"
    >
      <div
        className="OfferPhone__item"
        key="+7 916 039-63-38"
      >
        <div
          className="OfferPhone__phoneTitle"
        >
          +7 916 039-63-38
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`владелец нет подменника не должен отрендерить время для телефона 1`] = `
<div
  className="OfferPhone"
>
  <div
    className="OfferPhone__container"
  >
    <div
      className="OfferPhone__list"
    >
      <div
        className="OfferPhone__item"
        key="+7 916 039-63-38"
      >
        <div
          className="OfferPhone__phoneTitle"
        >
          +7 916 039-63-38
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`должен отрендерить упрощенную кнопку показа, если есть телефон 1`] = `
<Button
  className="OfferPhone OfferPhone_previewOnly"
  color="green"
  onClick={[Function]}
  radius="r8"
  size="l"
  type="button"
  width="full"
>
  <div
    className="OfferPhone__content"
  >
    <div
      className="OfferPhone__showPhoneText"
    >
      Показать телефон
    </div>
  </div>
</Button>
`;

exports[`должен отрендерить упрощенную кнопку показа, если нет телефона 1`] = `
<Button
  className="OfferPhone OfferPhone_button OfferPhone_previewOnly"
  color="green"
  onClick={[Function]}
  radius="r8"
  size="l"
  type="button"
  width="full"
>
  <div
    className="OfferPhone__content"
  >
    <div
      className="OfferPhone__showPhoneText"
    >
      Показать телефон
    </div>
  </div>
</Button>
`;

exports[`не владелец должен нарисовать кнопку 1`] = `
<Button
  className="OfferPhone OfferPhone_button"
  color="green"
  onClick={[Function]}
  radius="r8"
  size="l"
  type="button"
  width="full"
>
  <div
    className="OfferPhone__content"
  >
    <div
      className="OfferPhone__showPhoneText"
    >
      Показать телефон
    </div>
    <div
      className="OfferPhone__placeholder"
    >
      +7 ●●● ●●● ●● ●●
    </div>
  </div>
</Button>
`;
